improved plotting by fixing bg color

--- a/src/_playground_1.ipynb
+++ b/src/_playground_1.ipynb
@@ -27,6 +27,7 @@
     "    AsDiscrete,\n",
     "    Compose,\n",
     ")\n",
+    "from monai.metrics import MSEMetric\n",
     "from monai.utils import set_determinism\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -73,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.transforms import tumor_seg_transform_2"
+    "from utils.transforms import contr_syn_transform_3 as data_transform"
    ]
   },
   {
@@ -82,37 +83,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_dataset = BraTSDataset(\n",
-    "#     version='2017',\n",
-    "#     processed = USE_PROCESSED,\n",
-    "#     section = 'training',\n",
-    "#     seed = RANDOM_SEED,\n",
-    "#     transform = tumor_seg_transform_2['train']\n",
-    "# )\n",
-    "\n",
-    "val_dataset_orig = BraTSDataset(\n",
+    "dataset_orig = BraTSDataset(\n",
     "    version='2017',\n",
     "    processed = False,\n",
     "    section = 'validation',\n",
     "    seed = RANDOM_SEED,\n",
-    "    transform = tumor_seg_transform_2['val']\n",
+    "    transform = data_transform['val']\n",
     ")\n",
+    "loader_orig = DataLoader(dataset_orig, batch_size=1, shuffle=False, num_workers=8)\n",
     "\n",
-    "val_dataset_median = BraTSDataset(\n",
+    "dataset_median = BraTSDataset(\n",
     "    version='2017',\n",
     "    processed = True,\n",
     "    section = 'validation',\n",
     "    seed = RANDOM_SEED,\n",
-    "    transform = tumor_seg_transform_2['val']\n",
+    "    transform = data_transform['basic']\n",
     ")\n",
+    "loader_median = DataLoader(dataset_median, batch_size=1, shuffle=False, num_workers=8)\n",
     "\n",
     "logger.debug(\"Data loaded\")\n",
-    "logger.debug(f\"Length of dataset: {len(val_dataset_orig)}, {len(val_dataset_median)}\")\n",
-    "\n",
-    "\n",
-    "brain_slice = val_dataset_orig[0]['image']\n",
-    "print(brain_slice.shape)\n",
-    "h_index = brain_slice.shape[-1]//2"
+    "logger.debug(f\"Length of dataset: {len(dataset_orig)}, {len(dataset_median)}\")"
    ]
   },
   {
@@ -121,29 +111,139 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx_ = 1\n",
+    "# Load masks\n",
+    "mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
+    "train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
+    "val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)\n",
+    "all_mask_df = pd.concat([train_mask_df, val_mask_df], axis=0)\n",
+    "all_mask_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda:0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from utils.model import create_UNet3D, inference\n",
     "\n",
-    "this_data = val_dataset_orig[idx_]\n",
-    "brain_slice = this_data['image'][1][...,h_index].T\n",
-    "print(brain_slice.shape)\n",
+    "# RUN_ID = 22\n",
+    "# RANDOM_SEED = 0\n",
+    "# ROOT_DIR = \"/scratch1/sachinsa/cont_syn\"\n",
+    "# load_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID}\")\n",
+    "\n",
+    "# model = create_UNet3D(out_channels=12, device=device)\n",
+    "# checkpoint = torch.load(os.path.join(load_dir, 'best_checkpoint.pth'), weights_only=True)\n",
+    "# model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "\n",
+    "# mse_metric = MSEMetric(reduction=\"mean\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_ = 1\n",
+    "this_data = dataset_orig[id_]\n",
+    "median_data = dataset_median[id_]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_orig.get_with_id(328);\n",
+    "dataset_median.get_with_id(328);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_ = 1\n",
+    "this_data = dataset_orig[id_]\n",
+    "this_inputs = this_data[\"image\"].unsqueeze(0).to(device)\n",
+    "this_id = this_data[\"id\"]\n",
+    "this_mask = torch.from_numpy(all_mask_df.loc[[this_id], :].values).to(device)\n",
+    "\n",
+    "median_data = dataset_median[id_]\n",
+    "this_saved_median = median_data[\"image\"].unsqueeze(0)[:,:4,...].to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with torch.no_grad():\n",
+    "#     this_target = this_inputs.clone()\n",
+    "#     this_inputs = this_inputs*~this_mask[:,:,None,None,None]\n",
+    "#     this_outputs = inference(this_inputs, model)\n",
+    "\n",
+    "# this_output_median = this_outputs[:,:4,...]\n",
+    "# mse_metric(y_pred=this_output_median, y=this_saved_median)\n",
+    "\n",
+    "# metric = mse_metric.aggregate().item()\n",
+    "# mse_metric.reset()\n",
+    "# print(f\"mse error: {metric}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_index = 77\n",
+    "c_index = 1 # channel\n",
+    "channels = [\"FLAIR\", \"T1w\", \"T1Gd\", \"T2w\"]\n",
+    "print(f\"Channel: {channels[c_index]}\")\n",
+    "print(f\"ID: {this_id}\")\n",
+    "brain_slice = this_inputs.detach().cpu().numpy()\n",
+    "brain_slice = brain_slice[0,c_index,:,:,h_index].T\n",
     "plt.figure()\n",
-    "plt.title(f'Original: {this_data[\"id\"]}')\n",
+    "plt.title(f'Original: {this_id}')\n",
     "plt.imshow(brain_slice, cmap='gray')\n",
     "plt.colorbar()\n",
     "\n",
-    "brain_slice = this_data['label'][1][...,h_index].T\n",
+    "brain_slice = this_saved_median.detach().cpu().numpy()\n",
+    "brain_slice = brain_slice[0,c_index,:,:,h_index].T\n",
+    "print(brain_slice.mean(), brain_slice.min(), brain_slice.max())\n",
     "plt.figure()\n",
-    "plt.title(f'Label: {this_data[\"id\"]}')\n",
+    "plt.title(f'Saved Median: {this_id}')\n",
     "plt.imshow(brain_slice, cmap='gray')\n",
     "plt.colorbar()\n",
     "\n",
-    "this_data = val_dataset_median[idx_]\n",
-    "brain_slice = this_data['image'][1][...,h_index].T\n",
-    "print(brain_slice.shape)\n",
-    "plt.figure()\n",
-    "plt.title(f'Median: {this_data[\"id\"]}')\n",
-    "plt.imshow(brain_slice, cmap='gray')\n",
-    "plt.colorbar()"
+    "# brain_slice = this_output_median.detach().cpu().numpy()\n",
+    "# brain_slice = brain_slice[0,c_index,:,:,h_index].T\n",
+    "# print(brain_slice.mean(), brain_slice.min(), brain_slice.max())\n",
+    "# plt.figure()\n",
+    "# plt.title(f'Output Median: {this_id}')\n",
+    "# plt.imshow(brain_slice, cmap='gray')\n",
+    "# plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MSE: (over no-mask contrasts)"
    ]
   },
   {
@@ -152,22 +252,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = BraTSDataset(\n",
-    "    version='2017',\n",
-    "    processed = USE_PROCESSED,\n",
-    "    section = 'training',\n",
-    "    seed = RANDOM_SEED,\n",
-    "    transform = tumor_seg_transform['train']\n",
-    ")\n",
+    "# model.eval()\n",
+    "# i = 0\n",
+    "# with torch.no_grad():\n",
+    "#     for this_data, median_data in zip(loader_orig,loader_median):\n",
+    "#         i+=1\n",
+    "#         if i>1:break\n",
+    "#         this_inputs, this_ids = (\n",
+    "#             this_data[\"image\"].to(device),\n",
+    "#             this_data[\"id\"],\n",
+    "#         )\n",
+    "#         this_mask = torch.from_numpy(all_mask_df.loc[this_ids.tolist(), :].values).to(device)[:,:,None,None,None]\n",
+    "#         this_saved_median = median_data[\"image\"][:,:4,...].to(device)\n",
+    "#         this_inputs = this_inputs*~this_mask\n",
+    "#         this_saved_median = this_saved_median*~this_mask\n",
+    "#         mse_metric(y_pred=this_inputs, y=this_saved_median)\n",
     "\n",
-    "brain_slice = train_dataset[0]['image']\n",
-    "print(brain_slice.shape)\n",
-    "h_index = brain_slice.shape[-1]//2\n",
+    "#     metric = mse_metric.aggregate().item()\n",
+    "#     mse_metric.reset()\n",
+    "# print(f\"mse error: {metric}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MSE: (over masked contrasts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.eval()\n",
+    "# i = 0\n",
+    "# with torch.no_grad():\n",
+    "#     for this_data, median_data in zip(loader_orig,loader_median):\n",
+    "#         i+=1\n",
+    "#         if i>1:break\n",
+    "#         this_inputs, this_ids = (\n",
+    "#             this_data[\"image\"].to(device),\n",
+    "#             this_data[\"id\"],\n",
+    "#         )\n",
+    "#         this_mask = torch.from_numpy(all_mask_df.loc[this_ids.tolist(), :].values).to(device)[:,:,None,None,None]\n",
+    "#         this_saved_median = median_data[\"image\"][:,:4,...].to(device)\n",
+    "#         this_inputs = this_inputs*this_mask\n",
+    "#         this_saved_median = this_saved_median*this_mask\n",
+    "#         mse_metric(y_pred=this_inputs, y=this_saved_median)\n",
     "\n",
-    "this_data = train_dataset[4]\n",
-    "brain_slice = this_data['image'][1][...,h_index].T\n",
-    "print(brain_slice.shape)\n",
-    "plt.imshow(brain_slice, cmap='gray')"
+    "#     metric = mse_metric.aggregate().item()\n",
+    "#     mse_metric.reset()\n",
+    "# print(f\"mse error: {metric}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MSE (over everything)"
    ]
   },
   {
@@ -176,23 +320,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brain_slice = val_dataset[0]['image']\n",
-    "print(brain_slice.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "id_ = 75\n",
-    "ids_ = val_dataset.ids\n",
-    "this_data = val_dataset[np.where(ids_ == id_)[0][0]]\n",
-    "brain_slice = val_dataset[0]['image'][1][...,77].T\n",
-    "print(brain_slice.shape)\n",
-    "plt.imshow(brain_slice, cmap='gray')"
+    "# model.eval()\n",
+    "# i = 0\n",
+    "# with torch.no_grad():\n",
+    "#     for this_data, median_data in zip(loader_orig,loader_median):\n",
+    "#         i+=1\n",
+    "#         if i>1:break\n",
+    "#         this_inputs, this_ids = (\n",
+    "#             this_data[\"image\"].to(device),\n",
+    "#             this_data[\"id\"],\n",
+    "#         )\n",
+    "#         # this_mask = torch.from_numpy(all_mask_df.loc[this_ids.tolist(), :].values).to(device)[:,:,None,None,None]\n",
+    "#         this_saved_median = median_data[\"image\"][:,:4,...].to(device)\n",
+    "#         # this_inputs = this_inputs*this_mask\n",
+    "#         # this_saved_median = this_inputs*this_mask\n",
+    "#         mse_metric(y_pred=this_inputs, y=this_saved_median)\n",
+    "\n",
+    "#     metric = mse_metric.aggregate().item()\n",
+    "#     mse_metric.reset()\n",
+    "# print(f\"mse error: {metric}\")"
    ]
   }
  ],
