--- a/src/brats_segmentation.ipynb
+++ b/src/brats_segmentation.ipynb
@@ -36,8 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 22\n",
-    "USE_PROCESSED = False\n",
+    "RUN_ID = 50\n",
+    "USE_PROCESSED = True\n",
+    "DO_MASK = False\n",
     "RANDOM_SEED = 0\n",
     "MAX_EPOCHS = 2000\n",
     "TRAIN_DATA_SIZE = None\n",
@@ -47,7 +48,7 @@
     "DATA_ROOT_DIR = \"/scratch1/sachinsa/data\"\n",
     "\n",
     "# test code sanity (for silly errors)\n",
-    "SANITY_CHECK = True\n",
+    "SANITY_CHECK = False\n",
     "if SANITY_CHECK:\n",
     "    RUN_ID = 0\n",
     "    MAX_EPOCHS = 15\n",
@@ -201,9 +202,9 @@
    "outputs": [],
    "source": [
     "# Load masks\n",
-    "# mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
-    "# train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
-    "# val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)"
+    "mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
+    "train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
+    "val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)"
    ]
   },
   {
@@ -307,15 +308,19 @@
     "    epoch_loss = 0\n",
     "    step = 0\n",
     "    step_start = time.time()\n",
-    "    for batch_data in train_loader:\n",
+    "    for train_data in train_loader:\n",
     "        data_loaded_time = time.time() - step_start\n",
     "        step += 1\n",
-    "        train_inputs, train_labels = (\n",
-    "            batch_data[\"image\"].to(device),\n",
-    "            batch_data[\"label\"].to(device),\n",
+    "        train_inputs, train_labels, train_ids= (\n",
+    "            train_data[\"image\"].to(device),\n",
+    "            train_data[\"label\"].to(device),\n",
+    "            train_data[\"id\"],\n",
     "        )\n",
+    "        train_mask = torch.from_numpy(train_mask_df.loc[train_ids.tolist(), :].values).to(device)\n",
     "        if USE_PROCESSED:\n",
     "            train_inputs = train_inputs[:, :4, ...]\n",
+    "        if DO_MASK:\n",
+    "            train_inputs = train_inputs*~train_mask[:,:,None,None,None]\n",
     "        optimizer.zero_grad()\n",
     "        with torch.amp.autocast('cuda'):\n",
     "            train_outputs = model(train_inputs)\n",
@@ -340,12 +345,16 @@
     "        model.eval()\n",
     "        with torch.no_grad():\n",
     "            for val_data in val_loader:\n",
-    "                val_inputs, val_labels = (\n",
+    "                val_inputs, val_labels, val_ids = (\n",
     "                    val_data[\"image\"].to(device),\n",
     "                    val_data[\"label\"].to(device),\n",
+    "                    val_data[\"id\"],\n",
     "                )\n",
+    "                val_mask = torch.from_numpy(val_mask_df.loc[val_ids.tolist(), :].values).to(device)\n",
     "                if USE_PROCESSED:\n",
     "                    val_inputs = val_inputs[:, :4, ...]\n",
+    "                if DO_MASK:\n",
+    "                    val_inputs = val_inputs*~val_mask[:,:,None,None,None]\n",
     "                val_outputs = inference(val_inputs, model)\n",
     "                val_outputs = [post_trans(i) for i in decollate_batch(val_outputs)]\n",
     "                dice_metric(y_pred=val_outputs, y=val_labels)\n",
