--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -47,7 +47,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "RUN_ID = 22\n",
+        "RUN_ID = 23\n",
         "QR_REGRESSION = True\n",
         "DO_MASK = True\n",
         "MAX_EPOCHS = 6000\n",
@@ -411,7 +411,8 @@
         "                )\n",
         "                val_mask = torch.from_numpy(val_mask_df.loc[val_ids.tolist(), :].values).to(device)\n",
         "                val_target = val_inputs.clone()\n",
-        "                val_inputs = val_inputs*~val_mask[:,:,None,None,None]\n",
+        "                if DO_MASK:\n",
+        "                    val_inputs = val_inputs*~val_mask[:,:,None,None,None]\n",
         "                val_outputs = inference(val_inputs, model)\n",
         "                val_output_main = val_outputs[:,:4,...]\n",
         "                mse_metric(y_pred=val_output_main, y=val_target)\n",
