--- a/src/analyse_seg_results.ipynb
+++ b/src/analyse_seg_results.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 21\n",
+    "RUN_ID = 22\n",
+    "RANDOM_SEED = 0\n",
     "ROOT_DIR = \"/scratch1/sachinsa/brats_seg\"\n",
     "DATA_ROOT_DIR = \"/scratch1/sachinsa/data\""
    ]
@@ -31,6 +32,7 @@
     "import numpy as np\n",
     "import pickle\n",
     "from utils.logger import Logger\n",
+    "from utils.plot import *\n",
     "\n",
     "logger = Logger(log_level='DEBUG')"
    ]
@@ -128,6 +130,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metric = np.max(metric_values)\n",
+    "arg_max = np.argmax(metric_values)\n",
+    "metric_tc = metric_values_tc[arg_max]\n",
+    "metric_wt = metric_values_wt[arg_max]\n",
+    "metric_et = metric_values_et[arg_max]\n",
+    "\n",
+    "print(f\"metric: {metric:.3f}\")\n",
+    "print(f\"metric_tc: {metric_tc:.3f}\")\n",
+    "print(f\"metric_wt: {metric_wt:.3f}\")\n",
+    "print(f\"metric_et: {metric_et:.3f}\")\n",
+    "\n",
+    "\n",
+    "fig, axs = plt.subplots(1,4, figsize=(10, 3),gridspec_kw={'wspace': 0, 'hspace': 0})\n",
+    "plot_donut(metric, \"Total\", \"green\", axs[0])\n",
+    "plot_donut(metric_tc, \"TC\", \"blue\", axs[1])\n",
+    "plot_donut(metric_wt, \"WT\", \"brown\", axs[2])\n",
+    "plot_donut(metric_et, \"ET\", \"purple\", axs[3])\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,11 +172,7 @@
     "from monai.transforms import (\n",
     "    Compose,\n",
     ")\n",
-    "from torch.utils.data import Dataset\n",
-    "\n",
-    "from monai.apps import DecathlonDataset\n",
     "from monai.config import print_config\n",
-    "from monai.data import DataLoader, decollate_batch\n",
     "from monai.handlers.utils import from_engine\n",
     "from monai.losses import DiceLoss\n",
     "from monai.inferers import sliding_window_inference\n",
@@ -160,10 +184,11 @@
     "    Compose,\n",
     ")\n",
     "from monai.utils import set_determinism\n",
+    "\n",
     "from tqdm import tqdm\n",
     "from utils.transforms import tumor_seg_transform as data_transform\n",
-    "\n",
-    "import torch"
+    "from utils.model import create_SegResNet, inference\n",
+    "from utils.dataset import BraTSDataset"
    ]
   },
   {
@@ -173,14 +198,7 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda:0\")\n",
-    "model = SegResNet(\n",
-    "    blocks_down=[1, 2, 2, 4],\n",
-    "    blocks_up=[1, 1, 1],\n",
-    "    init_filters=16,\n",
-    "    in_channels=4,\n",
-    "    out_channels=3,\n",
-    "    dropout_prob=0.2,\n",
-    ").to(device)"
+    "model = create_SegResNet(device)"
    ]
   },
   {
@@ -192,20 +210,7 @@
     "dice_metric = DiceMetric(include_background=True, reduction=\"mean\")\n",
     "dice_metric_batch = DiceMetric(include_background=True, reduction=\"mean_batch\")\n",
     "\n",
-    "post_trans = Compose([Activations(sigmoid=True), AsDiscrete(threshold=0.5)])\n",
-    "\n",
-    "def inference(input):\n",
-    "    def _compute(input):\n",
-    "        return sliding_window_inference(\n",
-    "            inputs=input,\n",
-    "            roi_size=(240, 240, 160),\n",
-    "            sw_batch_size=1,\n",
-    "            predictor=model,\n",
-    "            overlap=0.5,\n",
-    "        )\n",
-    "\n",
-    "    with torch.amp.autocast('cuda'):\n",
-    "        return _compute(input)"
+    "post_trans = Compose([Activations(sigmoid=True), AsDiscrete(threshold=0.5)])"
    ]
   },
   {
@@ -214,17 +219,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_ds = DecathlonDataset(\n",
-    "    root_dir=DATA_ROOT_DIR,\n",
-    "    task=\"Task01_BrainTumour\",\n",
-    "    transform=data_transform['val'],\n",
-    "    section=\"validation\",\n",
-    "    download=False,\n",
-    "    cache_rate=0.0,\n",
-    "    num_workers=8,#4,\n",
-    ")\n",
-    "\n",
-    "val_loader = DataLoader(val_ds, batch_size=1, shuffle=False, num_workers=8)"
+    "val_dataset = BraTSDataset(\n",
+    "    version='2017',\n",
+    "    section = 'validation',\n",
+    "    seed = RANDOM_SEED,\n",
+    "    transform = data_transform['val']\n",
+    ")"
    ]
   },
   {
@@ -244,13 +244,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_index = 6\n",
     "with torch.no_grad():\n",
-    "    # select one image to evaluate and visualize the model output\n",
-    "    input_image = val_ds[val_index][\"image\"].unsqueeze(0).to(device)\n",
-    "    roi_size = (128, 128, 64)\n",
-    "    sw_batch_size = 4\n",
-    "    this_output = inference(input_image)\n",
+    "    this_input = val_dataset.get_with_id(328)\n",
+    "    input_image = this_input[\"image\"].unsqueeze(0).to(device)\n",
+    "    input_label = this_input[\"label\"]\n",
+    "    this_output = inference(input_image, model)\n",
     "    this_output = post_trans(this_output[0])"
    ]
   },
@@ -268,7 +266,7 @@
     "def plot_brain(index, label):\n",
     "    if label == \"ground_truth\":\n",
     "        start_index = 0\n",
-    "        brain_slice = val_ds[val_index][\"label\"]\n",
+    "        brain_slice = input_label\n",
     "        title = \"Ground Truth\"\n",
     "    elif label == \"prediction\":\n",
     "        start_index = len(label_list)\n",
@@ -293,8 +291,8 @@
     "        plt.ylabel(\"Input\", fontsize=30)\n",
     "    plt.xticks([0, im_width - 1], [0, im_width - 1], fontsize=15)\n",
     "    plt.yticks([0, im_length - 1], [0, im_length - 1], fontsize=15)\n",
-    "    plt.imshow(val_ds[val_index][\"image\"][i, :, :, 70].detach().cpu().T, cmap=\"gray\")\n",
-    "plt.suptitle(f\"BRATS_{val_ds.get_indices()[val_index]} (h={h_index}/{im_height})\", fontsize=20)\n",
+    "    plt.imshow(input_image[0, i, :, :, 70].detach().cpu().T, cmap=\"gray\")\n",
+    "plt.suptitle(f\"BRATS_{this_input['id']} (h={h_index}/{im_height})\", fontsize=20)\n",
     "plt.show()\n",
     "    \n",
     "plt.figure(\"label\", (18, 12))\n",
@@ -302,7 +300,7 @@
     "    plot_brain(i, \"ground_truth\")\n",
     "for i in range(len(label_list)):\n",
     "    plot_brain(i, \"prediction\")\n",
-    "plt.suptitle(f\"{val_ds.get_indices()[val_index]} (h={h_index}/{im_height})\", fontsize=20)\n",
+    "plt.suptitle(f\"BRATS_{this_input['id']} (h={h_index}/{im_height})\", fontsize=20)\n",
     "plt.show()"
    ]
   },
