re-training unet with larger crop area

--- a/src/_playground_1.ipynb
+++ b/src/_playground_1.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.transforms import contr_syn_transform_3 as data_transform"
+    "from utils.transforms import contr_syn_transform as data_transform"
    ]
   },
   {
