--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 23 # set this to prevent overlapped saving of model and data\n",
+    "RUN_ID = 24 # set this to prevent overlapped saving of model and data\n",
     "RANDOM_SEED = 0\n",
     "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\"\n",
     "QR_REGRESSION = True"
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "load_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID}\")\n",
-    "fig_save_dir = os.path.join(\"..\", \"figs\", f\"run_{RUN_ID}\")\n",
+    "fig_save_dir = os.path.join(\"..\", \"figs\", \"runs\", f\"run_{RUN_ID}\")\n",
     "os.makedirs(fig_save_dir, exist_ok=True)"
    ]
   },
@@ -136,7 +136,7 @@
     "plt.tight_layout()\n",
     "plt.plot(x_val, y_val, color=\"green\")\n",
     "plt.savefig(os.path.join(fig_save_dir, \"val_plot.png\"), facecolor='white')\n",
-    "plt.ylim([0, 1])\n",
+    "# plt.ylim([0, 1])\n",
     "plt.show()"
    ]
   },
@@ -156,7 +156,7 @@
     "import torch\n",
     "\n",
     "from utils.model import create_UNet3D, inference\n",
-    "from utils.transforms import contr_syn_transform_3\n",
+    "from utils.transforms import contr_syn_transform_2 as data_transform\n",
     "from utils.dataset import BraTSDataset"
    ]
   },
@@ -181,7 +181,7 @@
     "    version='2017',\n",
     "    section = 'validation',\n",
     "    seed = RANDOM_SEED,\n",
-    "    transform = contr_syn_transform_3['val']\n",
+    "    transform = data_transform['val']\n",
     ")"
    ]
   },
