--- a/src/analyse_seg_results.ipynb
+++ b/src/analyse_seg_results.ipynb
@@ -13,7 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 22\n",
+    "RUN_ID = 60\n",
+    "USE_PROCESSED = True\n",
+    "ONLY_MEDIAN = False\n",
     "RANDOM_SEED = 0\n",
     "ROOT_DIR = \"/scratch1/sachinsa/brats_seg\"\n",
     "DATA_ROOT_DIR = \"/scratch1/sachinsa/data\""
@@ -198,7 +200,8 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda:0\")\n",
-    "model = create_SegResNet(device)"
+    "in_channels = 4 if ONLY_MEDIAN else 12\n",
+    "model = create_SegResNet(in_channels, device)"
    ]
   },
   {
@@ -221,6 +224,7 @@
    "source": [
     "val_dataset = BraTSDataset(\n",
     "    version='2017',\n",
+    "    processed = USE_PROCESSED,\n",
     "    section = 'validation',\n",
     "    seed = RANDOM_SEED,\n",
     "    transform = data_transform['val']\n",
