--- a/src/brats_segmentation.ipynb
+++ b/src/brats_segmentation.ipynb
@@ -36,8 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 50\n",
+    "RUN_ID = 70\n",
     "USE_PROCESSED = True\n",
+    "ONLY_MEDIAN = True\n",
     "DO_MASK = False\n",
     "RANDOM_SEED = 0\n",
     "MAX_EPOCHS = 2000\n",
@@ -51,9 +52,9 @@
     "SANITY_CHECK = False\n",
     "if SANITY_CHECK:\n",
     "    RUN_ID = 0\n",
-    "    MAX_EPOCHS = 15\n",
-    "    TRAIN_DATA_SIZE = 10\n",
-    "    VAL_INTERVAL = 2\n",
+    "    MAX_EPOCHS = 2\n",
+    "    TRAIN_DATA_SIZE = 6\n",
+    "    VAL_INTERVAL = 1\n",
     "\n",
     "logger.info(\"PARAMETERS\\n-----------------\")\n",
     "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
@@ -105,7 +106,7 @@
     "\n",
     "from utils.dataset import BraTSDataset\n",
     "from utils.model import create_SegResNet, inference\n",
-    "from utils.transforms import tumor_seg_transform_2 as data_transform\n",
+    "from utils.transforms import tumor_seg_transform_3 as data_transform\n",
     "\n",
     "# print_config()"
    ]
@@ -228,7 +229,8 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda:0\")\n",
-    "model = create_SegResNet(device)\n",
+    "in_channels = 4 if ONLY_MEDIAN else 12\n",
+    "model = create_SegResNet(in_channels, device)\n",
     "logger.debug(\"Model defined\")"
    ]
   },
@@ -317,7 +319,7 @@
     "            train_data[\"id\"],\n",
     "        )\n",
     "        train_mask = torch.from_numpy(train_mask_df.loc[train_ids.tolist(), :].values).to(device)\n",
-    "        if USE_PROCESSED:\n",
+    "        if USE_PROCESSED and ONLY_MEDIAN:\n",
     "            train_inputs = train_inputs[:, :4, ...]\n",
     "        if DO_MASK:\n",
     "            train_inputs = train_inputs*~train_mask[:,:,None,None,None]\n",
@@ -351,7 +353,7 @@
     "                    val_data[\"id\"],\n",
     "                )\n",
     "                val_mask = torch.from_numpy(val_mask_df.loc[val_ids.tolist(), :].values).to(device)\n",
-    "                if USE_PROCESSED:\n",
+    "                if USE_PROCESSED and ONLY_MEDIAN:\n",
     "                    val_inputs = val_inputs[:, :4, ...]\n",
     "                if DO_MASK:\n",
     "                    val_inputs = val_inputs*~val_mask[:,:,None,None,None]\n",
