--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -47,7 +47,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "RUN_ID = 23\n",
+        "RUN_ID = 24\n",
         "QR_REGRESSION = True\n",
         "DO_MASK = True\n",
         "MAX_EPOCHS = 6000\n",
@@ -129,7 +129,7 @@
         "\n",
         "from utils.dataset import BraTSDataset\n",
         "from utils.model import create_UNet3D, inference\n",
-        "from utils.transforms import contr_syn_transform_3\n",
+        "from utils.transforms import contr_syn_transform_2  as data_transform\n",
         "\n",
         "# print_config()"
       ]
@@ -194,14 +194,14 @@
         "    version='2017',\n",
         "    section = 'training',\n",
         "    seed = RANDOM_SEED,\n",
-        "    transform = contr_syn_transform_3['train']\n",
+        "    transform = data_transform['train']\n",
         ")\n",
         "\n",
         "val_dataset = BraTSDataset(\n",
         "    version='2017',\n",
         "    section = 'validation',\n",
         "    seed = RANDOM_SEED,\n",
-        "    transform = contr_syn_transform_3['val']\n",
+        "    transform = data_transform['val']\n",
         ")\n",
         "\n",
         "# TODO: add logic to get subset inside BraTSDataset\n",
