added reqs.yml file

--- a/src/brats_segmentation.ipynb
+++ b/src/brats_segmentation.ipynb
@@ -59,6 +59,8 @@
     "logger.info(\"PARAMETERS\\n-----------------\")\n",
     "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
     "logger.info(f\"USE_PROCESSED: {USE_PROCESSED}\")\n",
+    "logger.info(f\"ONLY_MEDIAN: {ONLY_MEDIAN}\")\n",
+    "logger.info(f\"DO_MASK: {DO_MASK}\")\n",
     "logger.info(f\"MAX_EPOCHS: {MAX_EPOCHS}\")\n",
     "logger.info(f\"TRAIN_DATA_SIZE: {TRAIN_DATA_SIZE}\")\n",
     "logger.info(f\"BATCHSIZE_TRAIN: {BATCHSIZE_TRAIN}\")\n",
