--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,8 @@
    "outputs": [],
    "source": [
     "load_dir = os.path.join(ROOT_DIR, f\"run_{RUN_ID}\")\n",
-    "fig_save_dir = os.path.join(\"..\", \"figs\", \"runs\", f\"run_{RUN_ID}\")\n",
+    "fig_save_dir_root = os.path.join(\"..\", \"figs\")\n",
+    "fig_save_dir = os.path.join(fig_save_dir_root, \"runs\", f\"run_{RUN_ID}\")\n",
     "os.makedirs(fig_save_dir, exist_ok=True)"
    ]
   },
@@ -191,6 +192,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "val_dataset.ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "checkpoint = torch.load(os.path.join(load_dir, 'best_checkpoint.pth'), weights_only=True)\n",
     "model.load_state_dict(checkpoint['model_state_dict'])\n",
     "model.eval()\n",
@@ -201,9 +211,10 @@
     "\n",
     "# interesting ids with tummor: 328, 448\n",
     "\n",
+    "id_ = 429\n",
     "with torch.no_grad():\n",
     "    # this_input = val_dataset.get_random()\n",
-    "    this_input = val_dataset.get_with_id(328)\n",
+    "    this_input = val_dataset.get_with_id(id_)\n",
     "    input_image = this_input[\"image\"].unsqueeze(0).to(device)\n",
     "    input_label = this_input[\"label\"]\n",
     "    input_image_copy = input_image.clone()\n",
@@ -226,22 +237,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(\"image\", (24, 18))\n",
-    "b_plot = BrainPlot(input_image, this_output, input_mask)\n",
+    "plt.figure(\"image\", (18, 18))\n",
+    "b_plot = BrainPlot(input_image, this_output, input_mask, h_index=77, id=id_)\n",
     "for i in range(4):\n",
     "    b_plot.plot(\"input\")\n",
     "for i in range(4):\n",
     "    b_plot.plot(\"q0\")\n",
     "for i in range(4):\n",
-    "    b_plot.plot(\"diff\")"
+    "    b_plot.plot(\"q1\")\n",
+    "for i in range(4):\n",
+    "    b_plot.plot(\"q2\")\n",
+    "plt.savefig(os.path.join(fig_save_dir_root, \"results\", f\"brats_{id_}.png\"), facecolor='white')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv-4",
+   "display_name": "BIG env",
    "language": "python",
-   "name": "myenv-4"
+   "name": "big_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -253,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
