--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -47,7 +47,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "RUN_ID = 24\n",
+        "RUN_ID = 30\n",
         "QR_REGRESSION = True\n",
         "DO_MASK = True\n",
         "MAX_EPOCHS = 6000\n",
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "PeNCIs06KX7R"
       },
@@ -224,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -478,9 +478,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "myenv-4",
+      "display_name": "BIG env",
       "language": "python",
-      "name": "myenv-4"
+      "name": "big_env"
     },
     "language_info": {
       "codemirror_mode": {
@@ -492,7 +492,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.9.21"
     }
   },
   "nbformat": 4,
